[project]
name = "mcp-cloudflare-crawl"
version = "0.1.0"
description = "MCP server for Cloudflare Browser Rendering Crawl API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mcp-cloudflare-crawl = "mcp_cloudflare_crawl.__main__:main"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cloudflare_crawl"]
